[gd_scene load_steps=29 format=2]

[ext_resource path="res://images/BACKGROUNDDDD.png" type="Texture" id=1]
[ext_resource path="res://Scripts/menu_inicial.gd" type="Script" id=2]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/BOTAO_EXIT_ROSA.png" type="Texture" id=4]
[ext_resource path="res://images/BOTAO_PLAY_BRANCO.png" type="Texture" id=5]
[ext_resource path="res://images/botao_creditos_rosa.png" type="Texture" id=6]
[ext_resource path="res://images/logotipo.png" type="Texture" id=7]
[ext_resource path="res://images/BOTAO_PLAY_ROSA.png" type="Texture" id=8]
[ext_resource path="res://images/BOTAO_EXIT_BRANCO.png" type="Texture" id=9]
[ext_resource path="res://images/botao_creditos_branco.png" type="Texture" id=10]
[ext_resource path="res://images/Pause_rosa (1).png" type="Texture" id=11]
[ext_resource path="res://images/flashcard4.png" type="Texture" id=12]
[ext_resource path="res://images/X_botao_branco.png" type="Texture" id=13]
[ext_resource path="res://images/X_botao.png" type="Texture" id=14]
[ext_resource path="res://images/Pause_branco.png" type="Texture" id=15]
[ext_resource path="res://images/buto_play_rosa (1).png" type="Texture" id=16]
[ext_resource path="res://images/buto_play_branco.png" type="Texture" id=17]
[ext_resource path="res://images/buto_play_branco (1).png" type="Texture" id=18]

[sub_resource type="StyleBoxFlat" id=15]

[sub_resource type="StyleBoxFlat" id=16]

[sub_resource type="StyleBoxFlat" id=17]

[sub_resource type="StyleBoxFlat" id=18]

[sub_resource type="Theme" id=5]
Button/styles/focus = SubResource( 15 )
Button/styles/hover = SubResource( 16 )
Button/styles/normal = SubResource( 17 )
Button/styles/pressed = SubResource( 18 )

[sub_resource type="StyleBoxFlat" id=19]

[sub_resource type="StyleBoxFlat" id=20]

[sub_resource type="StyleBoxFlat" id=21]

[sub_resource type="StyleBoxFlat" id=22]

[sub_resource type="Theme" id=14]
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[node name="Node2D2" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
SceneToGo = "res://Node2D.tscn"

[node name="fundo_inicial" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 642, 328 )
scale = Vector2( 0.32025, 0.273263 )
texture = ExtResource( 1 )

[node name="Logotipo" type="Sprite" parent="."]
position = Vector2( 642, 139 )
texture = ExtResource( 7 )

[node name="jogar_button" type="TextureButton" parent="."]
margin_left = 504.0
margin_top = 245.0
margin_right = 1649.0
margin_bottom = 680.0
rect_min_size = Vector2( 10, 10 )
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 10, -5.00012 )
theme = SubResource( 5 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="jogar_button"]
light_mask = 2
margin_left = 67.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="config_button" type="TextureButton" parent="."]
margin_left = 1198.0
margin_top = 16.0
margin_right = 1484.0
margin_bottom = 276.0
rect_scale = Vector2( 0.21, 0.2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="config_button"]
light_mask = 2
margin_left = 34.0
margin_top = 5.0
margin_right = 145.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="sair_button" type="TextureButton" parent="."]
margin_left = 514.0
margin_top = 341.0
margin_right = 1597.0
margin_bottom = 952.0
rect_scale = Vector2( 0.21, 0.131 )
theme = SubResource( 14 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="sair_button"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 72.0
margin_top = 3.0
margin_right = 145.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
uppercase = true

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[node name="ButtonPlay" type="TextureButton" parent="."]
margin_left = 38.0
margin_top = 564.0
margin_right = 100.0
margin_bottom = 621.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true

[node name="ButtonStop" type="TextureButton" parent="."]
margin_left = 113.0
margin_top = 565.0
margin_right = 175.0
margin_bottom = 620.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 640, 317 )
scale = Vector2( 1.46406, 1.42188 )
texture = ExtResource( 12 )

[node name="TextureButton" type="TextureButton" parent="Control"]
margin_left = 1027.0
margin_top = 127.0
margin_right = 1070.0
margin_bottom = 167.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="Control"]
margin_left = 213.0
margin_top = 124.0
margin_right = 413.0
margin_bottom = 520.0
text = "GRUPO ELEVATE                       
                                                  

Desenvolvedores:

Henrique Burle

Guilherme Moura

Emely Tavares

Mariana Gorresen

Thomaz Klifson

Jose Vitor Marcelino





               "

[node name="Label2" type="Label" parent="Control"]
margin_left = 386.0
margin_top = 121.0
margin_right = 623.0
margin_bottom = 518.0
text = "AGRADECIMENTOS ESPECIAIS:


Nossas orientadoras: Fabiana Martins e Julia Stateri

Nossos professores: VIctor Queiroz, Francisco Escobar
                                  Ricardo Missori, Pedro Teberga e
								                                   Davi Moreno.
																
																OBRIGADO DELL POR NOS PROPORCIONAR O APRENDIZADO
													
"

[node name="Label" type="Label" parent="."]
margin_left = 11.0
margin_top = 543.0
margin_right = 210.0
margin_bottom = 557.0
text = "MUSIC"
align = 1

[connection signal="pressed" from="jogar_button" to="." method="_on_jogar_button_pressed"]
[connection signal="pressed" from="config_button" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="sair_button" to="." method="_on_sair_button_pressed"]
[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="ButtonStop" to="." method="_on_ButtonStop_pressed"]
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_TextureButton_pressed"]
